Added a stub version of a gems resource class

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,5 +3,5 @@ project(grandeur)
 
 set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11")
 
-set(SOURCE_FILES main.cpp mechanics.cpp mechanics.h)
+set(SOURCE_FILES main.cpp mechanics.cpp mechanics.h gems.cpp gems.h)
 add_executable(grandeur ${SOURCE_FILES})
