--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -5,3 +5,5 @@ set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11")
 
 set(SOURCE_FILES main.cpp mechanics.cpp mechanics.h gems.cpp gems.h)
 add_executable(grandeur ${SOURCE_FILES})
+
+add_subdirectory(tests)
