--- a/tests/unit_tests/CMakeLists.txt
+++ b/tests/unit_tests/CMakeLists.txt
@@ -3,6 +3,10 @@ include_directories(
         ${gtest_SOURCE_DIR}
         ${grandeur_SOURCE_DIR})
 
-add_executable(runGrandeurTests testGems.cpp)
+set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++14")
+
+add_executable(runGrandeurTests
+        testGems.cpp ${grandeur_SOURCE_DIR}/gems.cpp
+        )
 
 target_link_libraries(runGrandeurTests gtest gtest_main)
