--- a/tests/unit_tests/CMakeLists.txt
+++ b/tests/unit_tests/CMakeLists.txt
@@ -7,6 +7,6 @@ set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++14")
 
 add_executable(runGrandeurTests
         testGems.cpp ${grandeur_SOURCE_DIR}/gems.cpp
-        )
+        testCards.cpp ${grandeur_SOURCE_DIR}/card.cpp)
 
 target_link_libraries(runGrandeurTests gtest gtest_main)
