Initial (stub) version of Board class and (failing) tests

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,7 +3,7 @@ project(grandeur)
 
 set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++14")
 
-set(SOURCE_FILES main.cpp mechanics.cpp mechanics.h gems.cpp gems.h card.cpp card.h)
+set(SOURCE_FILES main.cpp mechanics.cpp mechanics.h gems.cpp gems.h card.cpp card.h board.cpp board.h constants.h)
 add_executable(grandeur ${SOURCE_FILES})
 
 add_subdirectory(tests)
